<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/colorBlack">

            <EditText
                android:id="@+id/amount_entered"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:hint="Amount"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/amount_research"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:paddingTop="11dp"
            android:src="@drawable/search" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:textColorHint="@color/colorBlack">

            <EditText
                android:id="@+id/tenor_entered"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:hint="Tenure"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/colorBlack" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/tenor_research"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="11dp"
            android:src="@drawable/search" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorBlue"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:weightSum="7.5">

        <TextView
            android:id="@+id/interest"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="@string/s10"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/banks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:gravity="center"
            android:text="@string/s11"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/tenure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:gravity="center"
            android:text="@string/s12"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/maturity_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:gravity="center"
            android:text="@string/s13"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Invest"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/package_list"
            android:layout_width="match_parent"
            android:layout_height="90dp"/>

        <Button
            android:id="@+id/show_more"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:drawableStart="@drawable/show_more"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:text="Show more offers"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:theme="@style/ButtonTextTheme" />

    </LinearLayout>

</LinearLayout>