<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorTransparent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".BankPackagesActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/fddirect_logo"
        android:background="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:weightSum="2">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            android:layout_weight="1" >

            <EditText
                android:id="@+id/amount_entered"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="Amount"
                android:textColor="@color/colorBlack"
                android:inputType="number"
                android:background="@color/colorWhite"
                android:gravity="center" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/amount_research"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search"
            android:paddingTop="11dp"
            android:paddingRight="5dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            android:layout_weight="1"
            android:paddingLeft="5dp" >

            <EditText
                android:id="@+id/tenor_entered"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="Tenure"
                android:textColor="@color/colorBlack"
                android:inputType="number"
                android:background="@color/colorWhite"
                android:gravity="center" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/tenor_research"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search"
            android:paddingTop="11dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/colorBlue"
        android:gravity="center_vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:weightSum="5">

        <TextView
            android:id="@+id/interest"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableEnd="@drawable/desc_sort"
            android:text="@string/s10"
            android:textSize="9sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorWhite" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/banks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/s11"
            android:textSize="10sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorWhite" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/tenure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/s12"
            android:textSize="10sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorWhite" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/maturity_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/s13"
            android:textSize="10sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorWhite" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorBlack" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Invest"
            android:textSize="10sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/package_list"
        android:layout_width="match_parent"
        android:layout_height="90dp" >
    </android.support.v7.widget.RecyclerView>

    <ImageButton
        android:id="@+id/show_more"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:src="@drawable/show_more" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="for some text"
        android:textSize="30sp"
        android:textColor="@color/colorBlack" />

</LinearLayout>